GenAI-Labs-V20-Kubernetes-Local/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: genai-backend
  namespace: genai-lab
spec:
  selector:
    app: genai-backend
  ports:
    - port: 8020
      targetPort: 8020
  type: ClusterIP
