GenAI-Labs-V20-Kubernetes-Local/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: genai-frontend
  namespace: genai-lab
spec:
  selector:
    app: genai-frontend
  ports:
    - port: 3020
      targetPort: 3020
  type: NodePort
